Fix header alignment
The banner and the text blocks weren't aligned properly.
Removed the padding from the text block in the header and made it so it now
has a 100% width, with a max-width of 80%.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 1em;
 }
 
 .header, .footer {
@@ -24,8 +25,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: 100%;
     max-width: 80%;
-    padding: 5em 7em;
     flex: 1;
 }
 
